# sanasprint-mlx

./: .gitignore  README.md  pyproject.toml
assets/: allowlist.txt
src/sanasprint_mlx/: __init__.py
tests/: __init__.py  test_import.py  test_project_metadata.py
tests/autoencoder/: __init__.py  test_config.py  test_decode_contract.py  test_decoder_ops.py  test_mlx_decoder.py  test_real_decode_parity.py  test_real_decoder_weights.py  test_tiling.py  test_weights.py
tests/baseline/: test_benchmark.py  test_benchmark_cli.py  test_compare_cli.py  test_comparison.py  test_schema.py
tests/fixtures/: __init__.py  test_manifest.py  test_reference_imports.py  test_synthetic.py
tests/generate/: __init__.py  test_cli.py  test_mlx_native.py  test_mlx_reference_decode.py  test_plan.py  test_reference_bridge.py  test_telemetry.py
tests/memory/: __init__.py  test_estimate.py  test_memory_cli.py  test_mlx_cache.py  test_mlx_probe.py
tests/pipeline/: test_debug_memory.py  test_denoise_loop.py  test_real_loop_fixture_parity.py
tests/primitives/: __init__.py  test_attention.py  test_embeddings.py  test_feed_forward.py  test_norm.py  test_patch.py
tests/scheduler/: test_scm.py
tests/text/: __init__.py  test_cache.py  test_config.py  test_encode_prompt.py  test_mlx_encoder.py  test_real_text_fixture_parity.py  test_tokenizer_contract.py
tests/transformer/: __init__.py  test_block.py  test_conditioning.py  test_config.py  test_debug_capture.py  test_model_contract.py  test_output.py  test_parameter_binding.py  test_parity_hooks.py  test_real_fixture_parity.py  test_timestep.py  (+2 more)
(+112 files in other folders)
